Fixed design + backend of SurnameVerificationCertificateNew form

--- a/src/pages/english-format/new/SurnameVerificationCertificateNew.css
+++ b/src/pages/english-format/new/SurnameVerificationCertificateNew.css
@@ -192,7 +192,7 @@
     visibility: visible;
   }
 
-  .verification-container {
+  .surname-verification-new-container {
     position: absolute;
     left: 0;
     top: 0;
